--- a/assignments/assignment_1_cocktail_bar.Rmd
+++ b/assignments/assignment_1_cocktail_bar.Rmd
@@ -32,7 +32,7 @@ Note: There are several different ways to solve these tasks, feel free to come u
 Read the cocktail dataset from: <https://github.com/nthun/cocktail-balance> You can also find the codebook there.
 
 ```{r}
-
+cocktails_all <-read_tsv("https://raw.githubusercontent.com/nthun/cocktail-balance/master/cocktail_data.tsv")
 ```
 
 ## 2. Transform the data table and clean the ingredient variable!
@@ -40,7 +40,18 @@ Read the cocktail dataset from: <https://github.com/nthun/cocktail-balance> You 
 The ingredients are currently in a single cell for each cocktail. It would be better to put them in separate rows. Also, the variable should be cleaned of all quantities (e.g. 1/2 oz, 2 dashes, etc.), and the indicator of alcohol content (e.g. 47.3% abv). You will need to use this cleaned table in later tasks.
 
 ```{r}
+sep <- c("<br/>", "<br>", "<b4/>")
+quantities <- c(".*oz", ".*dashes", ".*dash", ".*drops", ".*drop", ".*bsp", "\\([^\\)]+\\)", ".*es")
 
+for (separator in sep) {
+  cocktails_all <- cocktails_all %>% 
+  separate_longer_delim(ingredients, delim = separator)
+}
+
+for (quantity in quantities) {
+  cocktails_all <- cocktails_all %>%
+    mutate(ingredients = str_replace_all(ingredients, quantity, ""))
+}
 ```
 
 ## 3. All ingredients in alphabetical order
@@ -48,7 +59,12 @@ The ingredients are currently in a single cell for each cocktail. It would be be
 Before opening the bar, you need to find a reliable supplier that has all the ingredients. You need to send a list of all possible ingredients you will need. They don't need the quantities (i.e. how many of these are needed), just the names of the ingredients.
 
 ```{r}
+ingredient_list <- cocktails_all %>% 
+  distinct(trimws(ingredients)) %>% 
+  rename(ingredients = `trimws(ingredients)`) %>% 
+  arrange(ingredients)
 
+glimpse(ingredient_list)
 ```
 
 ## 4. Number of unique ingredients
@@ -56,7 +72,9 @@ Before opening the bar, you need to find a reliable supplier that has all the in
 How many different ingredients you will need?
 
 ```{r}
+sum_ingr <- nrow(ingredient_list)
 
+cat("The total number of distinct variables needed is :", sum_ingr) #ans: 62
 ```
 
 ## 5. What are the top 10 ingredients?
@@ -64,7 +82,13 @@ How many different ingredients you will need?
 What are the 10 most frequently used ingredients? If there are ties, you can list more than 10.
 
 ```{r}
+freq_ingr <- cocktails_all %>% 
+  group_by(trimws(ingredients)) %>% 
+  summarize(frequency = n()) %>% 
+  arrange(desc(frequency))%>% 
+  rename(ingredients = `trimws(ingredients)`)
 
+head(freq_ingr, 10)
 ```
 
 ## 6. Which cocktail(s) has/have the most ingredients?
@@ -72,7 +96,14 @@ What are the 10 most frequently used ingredients? If there are ties, you can lis
 Count the number of ingredients and filter all the cocktails that has that many.
 
 ```{r}
+count(ingredient_list)
 
+cocktail_most <- cocktails_all %>% 
+  group_by(name) %>% 
+  summarize(ingnum = n()) %>% 
+  top_n(n=1)
+
+head(cocktail_most)
 ```
 
 ## 7. How many ingredients appear in only one cocktail (rare ingredient)?
@@ -80,19 +111,37 @@ Count the number of ingredients and filter all the cocktails that has that many.
 Count all cocktails with only one ingredient, and
 
 ```{r}
+cocktail_ing <- cocktails_all %>% 
+  group_by(name) %>% 
+  summarize(ingnum = n()) %>% 
+  filter(ingnum == "1")
 
+print(cocktail_ing) #ans: 0
 ```
 
 ## 8. Which cocktail has an ingredient that is only used in one cocktail?
 
 ```{r}
+one_ingr <- freq_ingr %>%
+  filter(frequency == 1) %>%
+  pull(ingredients)
 
+one_ingr_cockt <- cocktails_all %>%
+  filter(trimws(ingredients) %in% one_ingr)%>%
+  pull(name)
+
+print(one_ingr_cockt)
 ```
 
 ## 9. What are the cocktails without rare ingredients?
 
 ```{r}
-  
+notrare_cockt <- cocktails_all %>%
+  filter(!(name %in% one_ingr_cockt))%>%
+  pull(name) %>% 
+  unique()
+
+print(notrare_cockt)
 ```
 
 ## 10. Create a cheat sheet for the bartender!
@@ -108,7 +157,24 @@ tribble(~name, ~Lime, ~`White rum`, ~`Cane sugar`, ~`Coca-cola`, ~Mint, ~Soda,
 ```
 
 ```{r}
+cocktail_matrix <- cocktails_all %>%
+  select(name, ingredients) %>% 
+  summarize(ingredients = trimws(ingredients),
+            name = name) %>% 
+  mutate(value = 1)
 
+cocktail_list <- cocktail_matrix %>% 
+  pull(name) %>% 
+  unique()
+
+ingredient_list <- cocktail_matrix %>% 
+  pull(ingredients) %>% 
+  unique()
+
+mtrx_c <- with(cocktail_matrix, tapply(value, list(name, ingredients), FUN = mean))
+finalmatrx <- matrix(ifelse(mtrx_c == 1, "X", ""), ncol = length(ingredient_list), dimnames = list(cocktail_list, ingredient_list))
+
+print(finalmatrx)
 ```
 
 
